Port HubSwap to Minecraft 1.21.11 and publish as maintained fork.
Rewrites the mod for Fabric 1.21.11 with Mojang mappings, updated GUI/chat APIs, and new README crediting Heldyy as the original author.